<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"/>

        <EditText
                android:id="@+id/first_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_first_name"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"/>

        <EditText
                android:id="@+id/last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_last_name"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"/>

        <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/hint_phone"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"/>

        <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/birth_date"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/birth_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:inputType="date"/>

            <ImageView
                    android:id="@+id/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_action_calendar_month"/>

        </LinearLayout>

        <Button
                android:id="@+id/save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"/>

    </LinearLayout>

</ScrollView>
